--- a/leon.css
+++ b/leon.css
@@ -1,10 +1,175 @@
 /* start global ruls */
-*{
-    -webkit-box-sizing:border-box;
+:root {
+    --main-color: #10cab7;
+}
+
+* {
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-body{
-    font-family: "work sans","sans-serif";
+
+body {
+    font-family: "work sans", "sans-serif";
+    margin: 0;
 }
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+
+}
+
+/*small*/
+@media (min-width:768px) {
+    .container {
+        width: 750px;
+    }
+}
+
+/*midum*/
+@media (min-width:929px) {
+    .container {
+        width: 970px;
+    }
+}
+
+/*large*/
+@media (min-width:1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+
 /*end global ruls */
+/* start header*/
+.header {
+    padding: 20px;
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header .links {
+    position: relative;
+    transition: 0.3s;
+}
+
+.header .links:hover .icon span:nth-child(2) {
+    width: 100%;
+}
+
+.header .links .icon {
+    width: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.header .links .icon span {
+    background-color: #333;
+    margin-bottom: 5px;
+    height: 3px;
+    width: 100%;
+}
+
+.header .links .icon span:first-child {
+    width: 100%;
+}
+
+.header .links .icon span:nth-child(2) {
+    width: 75%;
+    transition: 0.3s;
+}
+
+.header .links .icon span:last-child {
+    width: 100%;
+}
+
+.header .links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: #cbeeeb;
+    position: absolute;
+    right: 0;
+    top: calc(100% + 20px);
+    min-width: 180px;
+    display: none;
+    transition: 0.3;
+    z-index: 1;
+}
+
+.header .links:hover ul {
+    display: block;
+}
+
+.header .links ul::before {
+    content: "";
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border: 10px solid #cbeeeb;
+    border-color: transparent transparent #cbeeeb transparent;
+    right: 0;
+    top: -20px;
+
+}
+
+.header .links ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #333;
+    transition: 0.3s;
+}
+
+.header .links ul li a:hover {
+    padding-left: 25px;
+}
+
+.header .links ul li:not(:last-child) a {
+    border-bottom: 1px solid #222;
+}
+
+/* end header */
+/*start landing*/
+.landing {
+    background-image: url(https://th.bing.com/th/id/OIP.xFgBJDyEqbwM2HUC9orBBgHaEB?cb=iwc1&rs=1&pid=ImgDetMain);
+    background-size: cover;
+    height: calc(100vb - 90px);
+    position: relative;
+}
+
+.landing .intro_text {
+    width: 320px;
+    max-width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+.landing .intro_text h1 {
+    margin: 0;
+    font-weight: bold;
+    font-size: 50px;
+    color: var(--main-color);
+    text-align: center;
+}
+
+.landing .intro_text p {
+    font-size: 19px;
+    line-height: 1.8;
+    text-align: center;
+}
+
+/* end langing*/
