--- a/leon.css
+++ b/leon.css
@@ -1,6 +1,10 @@
 /* start global ruls */
 :root {
     --main-color: #10cab7;
+    --main-padding:60px;
+    --main-back-color:#edfcfb;
+    --back-border-color:#cbeeeb;
+    --secoundary-color:#2c4755;
 }
 
 * {
@@ -24,7 +28,17 @@ body {
 
 
 }
+/* moblile */
+@media (max-width:767px)
+{
+    .special-heading .service{
+        font-size:60px;
+    }
+    .special-heading p{
+        margin-top:-30px;
+    }
 
+}
 /*small*/
 @media (min-width:768px) {
     .container {
@@ -45,11 +59,40 @@ body {
         width: 1170px;
     }
 }
+/* start componts */
+.special-heading .service{
+   font-size: 100px;
+   text-align:center;
+   color:#ebeced;
+   font-weight:80px;
+   letter-spacing:-3px;
+   margin:0;
+} 
+.special-heading .porto{
+    font-size: 100px;
+    text-align:center;
+    color:#ebeced;
+    font-weight:80px;
+    letter-spacing:-3px;
+    margin:0;
+ } 
+.special-heading p{
+    margin:-30px 0 0; 
+    font-size:20px;
+    text-align:center;
+    color:#777;
+    margin-bottom:100px;
+}
+/* end componts */
 
 /*end global ruls */
+
 /* start header*/
 .header {
+    background-color:var(--main-back-color);
     padding: 20px;
+    border:3px solid var(--back-border-color);
+
 }
 
 .header .container {
@@ -143,10 +186,11 @@ body {
 /* end header */
 /*start landing*/
 .landing {
-    background-image: url(https://th.bing.com/th/id/OIP.xFgBJDyEqbwM2HUC9orBBgHaEB?cb=iwc1&rs=1&pid=ImgDetMain);
+    background-image: url(https://th.bing.com/th/id/R.198056c25408441a0f1afcdd830e7428?rik=AIWLkloWUQHaiQ&pid=ImgRaw&r=0);
     background-size: cover;
     height: calc(100vb - 90px);
     position: relative;
+    height:60vb;
 }
 
 .landing .intro_text {
@@ -155,7 +199,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 
 .landing .intro_text h1 {
@@ -171,5 +215,146 @@ body {
     line-height: 1.8;
     text-align: center;
 }
-
 /* end langing*/
+/* start features */
+.features{
+    padding-top:var(--main-padding);
+    padding-bottom:var(--main-padding);
+    background-color:var(--main-back-color);
+    border:solid 3px var(--back-border-color);
+}
+.features .container{
+    display:grid;
+    grid-template-columns:repeat(auto-fill,minmax(300px,1fr));
+    grid-gap:20px;
+}
+.features .container .feat{
+  padding:20px;
+  text-align:center;
+}
+.features .container .feat i{
+    color:var(--main-color);
+}
+.features .container .feat h3{
+    font-weight:800px;
+    margin:30px 0;
+}
+.features .container .feat p{
+    line-height:1.8;
+    color:#777;
+    font-size:17px;
+}
+/* end features */
+/* start sevices */
+
+.services {
+    padding:var(--main-padding);
+   background-color: var(--main-back-color);
+}
+.services-content {
+ display:grid;
+ grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+ gap:20px;
+}
+.services-content col {
+    margin:100px;
+}
+.services .services-content .srv{
+    display:flex;
+    margin-bottom:30px;
+}
+
+.services .services-content .srv i{
+    flex-basis:60px;
+    color:var(--main-color);
+    margin:10px;
+}
+.services .services-content .srv .text {
+    flex:1;
+}
+.services .services-content .srv .text p{
+    margin:15px;
+    color:#777;
+    font-weight:300px;
+    line-height:1.6;
+    font-size:17px;
+}
+.services .services-content .srv .text h3 {
+    margin-top:13px;
+}
+
+ .sev{
+    margin-top:70px;
+}
+.services-content .col .image{
+    text-align:center;
+    position:relative;
+}
+.services-content .col .image img{
+    width:260px;
+    max-width:100%;
+  
+}
+.services-content .col .image::before{
+    content:"";
+    position:absolute;
+    width:100px;
+    height:calc(100% + 100px);
+    background-color:var(--secoundary-color);
+    z-index: -1;
+    right:0;
+    top:-50px;
+}
+@media(max-width:1199px)
+{
+    .hidden-image{
+        display:none;
+    }
+}
+
+@media (max-width:767px)
+{
+    .services .services-content .srv{
+        flex-direction:column;
+        text-align:center;
+    }
+    .services .services-content .srv i{
+        flex-basis:60px;
+        color:var(--main-color);
+    }
+}
+/* end sevices */
+/* start portofolio */
+.portofolio{
+    padding-top:var(--main-padding);
+    padding-bottom:var(--main-padding);
+    background-color:var(--main-back-color);
+    border:solid 3px var(--back-border-color);
+}
+.portofolio-content {
+    display:grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap:20px;
+    margin-top:80px;
+   }
+   .portofolio-content .card{
+    background-color:white;
+    text-align: center;
+   }
+   .portofolio-content .card img{
+    max-width:100%;
+
+   }
+   .portofolio-content .card .info{
+   
+    padding-top:10px;
+   }
+   .portofolio-content .card .info h3{
+     margin:0;
+   }
+   .portofolio-content .card .info p{
+  line-height:1.6;
+  color:#777;
+   }
+ 
+/* end portofolio */
